<resources>
    <string name="app_name">Tippa</string>

    <string name="betButton">Tippa</string>
    <string name="addButton">Lägg till</string>
    <string name="reportResultButton">Rapportera resultat</string>
    <string name="reportResultUpdateButton">Uppdatera matchresultat</string>
    <string name="deleteButton">Ta bort</string>
    <string name="viewCompetitionButton">Tävlingar</string>
    <string name="viewStats">Statistik</string>

    <string name="handleCompetitions">Hantera tävlingar</string>
    <string name="handleGames">Hantera matcher</string>
    <string name="handleParticipants">Hantera deltagare</string>

    <string name="addCompetitionHint">Ny tävling</string>
    <string name="addParticipantHint">Ny deltagare</string>

    <string name="addTeamA">Lag 1</string>
    <string name="addTeamB">Lag 2</string>
    <string name="addDate">Datum</string>
    <string name="addBetAmount">Summa</string>
    <string name="addGameType">Typ av match</string>
    <string name="statLegend">UV = Unika Vinster\nDV=Delade Vinster\nF=Förluster\nTP=TotalPoäng</string>

</resources>
